# beherit

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  pyproject.toml  setup.py
beherit/: __init__.py  storage.py  tensor.py  utils.py
beherit/bridge/: asmodeus.cpp  device.cpp  device.h
beherit/bridge/metal/: metal.cpp
beherit/compute/: allocator.py  device.py
beherit/memory/: buffer.py  dtype.py
test/: test_tensor.py
